[gd_scene load_steps=6 format=2]

[ext_resource path="res://shared/Tileset.tres" type="TileSet" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://systems/EntityPlacer.gd" type="Script" id=3]
[ext_resource path="res://systems/Simulation.gd" type="Script" id=4]
[ext_resource path="res://entities/StirlingEngineEntity.tscn" type="PackedScene" id=5]

[node name="Simulation" type="Node"]
script = ExtResource( 4 )

[node name="GameWorld" type="Node2D" parent="."]

[node name="GroundTiles" type="TileMap" parent="GameWorld"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 100, 50 )
format = 1
tile_data = PoolIntArray( -458748, 1, 0, -458747, 1, 0, -458746, 1, 0, -458745, 1, 0, -458744, 1, 0, -458743, 1, 0, -458742, 1, 0, -458741, 1, 0, -458740, 1, 0, -458739, 1, 0, -458738, 1, 0, -458737, 1, 0, -458736, 1, 0, -393212, 1, 0, -393200, 1, 0, -327676, 1, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 1, 0, -262140, 1, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 1, 0, -196604, 1, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 1, 0, -131068, 1, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 1, 0, -65532, 1, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 1, 0, 4, 1, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 1, 0, 65540, 1, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 1, 0, 131076, 1, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 1, 0, 196612, 1, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 1, 0, 262148, 1, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0 )

[node name="YSort" type="YSort" parent="GameWorld"]

[node name="EntityPlacer" type="TileMap" parent="GameWorld/YSort"]
mode = 1
cell_size = Vector2( 100, 50 )
cell_y_sort = true
format = 1
script = ExtResource( 3 )

[node name="StirlingEngineEntity" parent="GameWorld/YSort/EntityPlacer" instance=ExtResource( 5 )]
position = Vector2( 696.262, 226.201 )

[node name="StirlingEngineEntity2" parent="GameWorld/YSort/EntityPlacer" instance=ExtResource( 5 )]
position = Vector2( 399.418, 257.949 )

[node name="Player" parent="GameWorld/YSort" instance=ExtResource( 2 )]
movement_speed = 200.0
